--- a/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -6,6 +6,6 @@ include::prereq.asciidoc[]
 include::openshift-do-command-line.asciidoc[]
 include::openshift-pipelines-tekton.asciidoc[]
 include::camelk.asciidoc[]
-include::camelkocpserverless.asciidoc[]
+include::camelkocpserverlesseventing.asciidoc[]
 
 
