Simplified Terminal instructions, removed mention of Terminal app

--- a/documentationbasic/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -2,6 +2,7 @@
 {author} <{email}>
 
 include::intro.asciidoc[]
+include::prereq.asciidoc[]
 include::applicationbasics.asciidoc[]
 include::deployments.asciidoc[]
 include::applicationdeploymentstrategies.asciidoc[]
