--- a/documentationbasic/ocp4devex/src/main/asciidoc/applicationbasics.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/applicationbasics.asciidoc
@@ -4,7 +4,7 @@
 
 This chapter will introduce the attendee to the mechanics of creating and manipulating Applications using OpenShift Container Platform. It will introduce the two distinct contexts of the User Interface, the Administrator and Developer views, and guide the attendee through creating some Applications.
 
-TIP: The attendee will be using a browser for interacting with both the OpenShift Container Platform UI and the provided terminal (for command line exercises). It is suggested the attendee uses Chrome or Firefox.
+TIP: The attendee will be using a browser for interacting with both the OpenShift Container Platform UI and the terminal application created in the pre-requisites step (for command line exercises). It is strongly suggested the attendee uses Chrome or Firefox.
 
 === Starting up - logging on and creating a project
 
@@ -205,16 +205,14 @@ The CLI is ideal in situations where you are:
 
 The CLI is available using the oc command:
 
-[source,shell]
+[source]
 ----
 oc {command}
 ----
 
-For the duration of the course you will be using a provided Application hosted within OpenShift itself - this is reachable at {terminalUrl}[{terminalUrl}]
+For the duration of the course you will be using a provided Application hosted within OpenShift itself that you created as part of the pre-requisites. Whenever the instructions tell you to use the terminal use the tab you setup. If you haven't completed the pre-requisites please complete them before proceeding
 
-The first time you visit the terminal application you will be prompted for a logon - use the same credentials as your OpenShift logon, userx and openshift
-
-*For the sakes of simplicity we advise you use the Terminal application provided - the following instructions for installation are completely optional*
+*For the sakes of simplicity we advise you use the Terminal application procreated - the following instructions for installation are completely optional*
 
 If you want to optionally install the oc client or use the terminal applications plus additional command line tools, such as ODO and tkn, you have two options; either install `oc` on your localhost or use a docker image in OpenShift. The image option is pre-built and running already and is easier if you have a locked-down laptop and are unable to download and install additional applications.
 
@@ -247,9 +245,9 @@ image::applicationbasics-6.png[Topology view]
 
 Select container image and paste into the image name :
 
-[source,shell]
+[source]
 ----
-quay.io/marrober/devex-terminal-4
+quay.io/ilawson/devex4
 ----
 
 Press the search button on the end of the line to force the application to examine the repository image.
@@ -281,7 +279,7 @@ If this document refers to _your terminal_ it will either be on your localhost o
 
 The response to executing the login command should look similar to that shown below :
 
-[source,shell]
+[source]
 ----
 Logged into "https://api.cluster-london-a6e1.london-a6e1.example.opentlc.com:6443" as "user1" using the token provided.
 
@@ -292,7 +290,7 @@ You don't have any projects. You can try to create a new project, by running
 
 Make sure `oc` is working, type:
 
-[source,shell]
+[source]
 ----
 oc whoami
 oc version
@@ -302,14 +300,14 @@ NOTE: Also see the *Command-Line Reference*: https://docs.openshift.com/containe
 
 To explore the command line further execute the following commands and observe the results.
 
-[source,shell]
+[source]
 ----
 oc projects
 ----
 
 User should have access to one project, explain the ability to access multiple projects
 
-[source,shell]
+[source]
 ----
 oc project sandboxX
 ----
@@ -318,7 +316,7 @@ User should now be using the sandboxX project created and configured earlier
 
 Next we will try a command that will fail because of OpenShift's security controls
 
-[source,shell]
+[source]
 ----
 oc get users
 ----
@@ -326,7 +324,7 @@ oc get users
 *There is a level of permission within the OpenShift system called ''Cluster Admin''. This permission allows a User to access any of the objects on the 
 system regardless of Project. It is effectively a super-user and as such normal users do not normally have this level of access.*
 
-[source,shell]
+[source]
 ----
 oc get pods
 ----
@@ -334,17 +332,17 @@ oc get pods
 *If you look carefully at the Pods shown you will notice there are additional Pods above and beyond the ones expected for your Applications. If you look at the state of 
 these Pods they will be marked as Completed. Everything in OpenShift is executed as a Pod, including Builds. These completed Pods are the Builds we have run so far.*
 
-[source,shell]
+[source]
 ----
 oc get pods | grep Completed
 ----
 
-[source,shell]
+[source]
 ----
 oc get pods | grep Running
 ----
 
-[source,shell]
+[source]
 ----
 oc get dc
 ----
@@ -355,7 +353,7 @@ Volume Mounts, labelled targetting of Nodes and the like.*
 
 Enter the command below to tell OpenShift to scale the number of instances of the Deployment Config 'nodenews' to two rather than the default one.
 
-[source,shell]
+[source]
 ----
 oc scale dc/nodenews --replicas=2
 ----
